--- a/src/css/global.css
+++ b/src/css/global.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900;9..40,1000&display=swap");
 .article-grid.cards {
-  padding: 3rem 0;
+  padding: 2rem 0 3rem 0;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 2rem;
@@ -834,19 +834,47 @@ section.about .container .row .right .btngroup a.btn-round {
     padding: 0 2rem;
   }
 }
-section.contact-hero {
+section.small-hero {
   position: relative;
 }
-section.contact-hero img.bg-lines {
+section.small-hero img.bg-lines {
   max-width: 40dvw;
   padding: 0;
   position: absolute;
   bottom: 0;
   left: 0;
 }
-section.contact-hero .container {
-  justify-content: center;
-  align-items: flex-start;
+section.small-hero .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+section.small-hero .container .link-grp {
+  display: flex;
+  gap: 1rem;
+}
+section.small-hero .container .link-grp a {
+  color: #191919;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-transform: capitalize;
+}
+section.small-hero .container .link-grp a::after {
+  width: 0px;
+  margin: 0.5rem auto;
+  content: "";
+  border-bottom: 1px solid #191919;
+  transition: all 0.3s ease-in-out;
+}
+section.small-hero .container .link-grp a:hover, section.small-hero .container .link-grp a:focus {
+  color: #191919;
+}
+section.small-hero .container .link-grp a:hover::after, section.small-hero .container .link-grp a:focus::after {
+  width: 2rem;
+}
+section.small-hero .container .link-grp a.active {
+  font-weight: 700;
 }
 
 section.contact-information {
@@ -1537,6 +1565,110 @@ section.why-us .right .image-wrapper img {
     justify-content: center;
   }
 }
+section.overview-news {
+  background-color: #ffffff;
+}
+
+section.article-news {
+  padding: 5rem 0 3rem 0;
+  background-color: #ffffff;
+}
+section.article-news .container .article-header {
+  max-width: 66.66%;
+}
+section.article-news .container .article-header .article-header-info {
+  display: flex;
+  gap: 1.5rem;
+  font-weight: 600;
+}
+section.article-news .container .article-header .article-header-info .dot {
+  min-height: 0.5rem;
+  min-width: 0.5rem;
+  margin: 0.5rem 0 auto 0;
+  background-color: #f9d783;
+  border-radius: 25px;
+}
+section.article-news .container .article-main {
+  display: flex;
+  flex: 2 1;
+  gap: 7.5rem;
+}
+section.article-news .container .article-main article p {
+  margin-top: 3rem;
+}
+section.article-news .container .article-main article .btn-grp {
+  margin-top: 2em;
+  display: flex;
+  gap: 1rem;
+}
+section.article-news .container .article-main article .btn-grp div {
+  min-width: 6rem;
+  padding: 0.5rem 1rem;
+  background-color: #f0efe9;
+  border-radius: 25px;
+  text-align: center;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+section.article-news .container .article-main article .btn-grp div:hover {
+  background-color: #191919;
+  color: #f0efe9;
+}
+section.article-news .container .article-main .sidebar {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+section.article-news .container .article-main .sidebar .search-field {
+  display: flex;
+  gap: 0.8rem;
+  align-items: center;
+  background-color: #f0efe9;
+  padding: 1rem 2rem;
+  border-radius: 25px;
+}
+section.article-news .container .article-main .sidebar .search-field input#news-search::placeholder {
+  color: #84848a;
+}
+section.article-news .container .article-main .sidebar .search-field input#news-search:focus::placeholder {
+  color: transparent;
+}
+section.article-news .container .article-main .sidebar .recent-posts, section.article-news .container .article-main .sidebar .categories {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  border: 1px solid #f0efe9;
+  padding: 2rem;
+}
+section.article-news .container .article-main .sidebar .recent-posts h3, section.article-news .container .article-main .sidebar .categories h3 {
+  font-size: 1.25rem;
+}
+section.article-news .container .article-main .sidebar .recent-posts h3::after, section.article-news .container .article-main .sidebar .categories h3::after {
+  content: "";
+  display: block;
+  width: 2rem;
+  border-bottom: 1px solid #191919;
+}
+section.article-news .container .article-main .sidebar .recent-posts h4, section.article-news .container .article-main .sidebar .categories h4 {
+  font-size: 1.1rem;
+}
+section.article-news .container .article-main .sidebar .recent-posts p, section.article-news .container .article-main .sidebar .recent-posts div, section.article-news .container .article-main .sidebar .categories p, section.article-news .container .article-main .sidebar .categories div {
+  color: #84848a;
+}
+section.article-news .container .article-main .sidebar .recent-posts .line {
+  height: 1px;
+  width: 100%;
+  background-color: #f0efe9;
+  margin: 1rem 0;
+}
+section.article-news .container .article-main .sidebar .categories div {
+  font-weight: 600;
+}
+section.article-news .container .article-main .sidebar .categories div span {
+  color: #191919;
+}
+
 section.newsletter {
   position: relative;
 }
