--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -9,7 +9,6 @@
 @import '../components/utilities/button/button';
 
 
-
 $font: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $headings-font: "DM Sans", SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 
@@ -304,6 +303,7 @@ form {
 @import '../components/sections-info/whyUs/whyUs';
 @import '../components/sections-info/overviewNews/overviewNews';
 @import '../components/sections-info/articleNews/articleNews';
+@import '../components/sections-info/notFoundSection/notFoundSection';
 
 @import '../components/sections-input/newsletter/newsletter';
 @import '../components/sections-input/contactForm/contactForm';
