--- a/src/css/global.css
+++ b/src/css/global.css
@@ -17,7 +17,8 @@
 .article-grid.cards a.card .image-wrapper img {
   width: 100%;
   max-height: 280px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   aspect-ratio: 3/2;
 }
 .article-grid.cards a.card .image-wrapper .date-box {
@@ -278,8 +279,14 @@ form fieldset label input:required:valid + .icon::after, form fieldset label tex
   content: "\f058";
   color: green;
 }
+form fieldset label input::-moz-placeholder, form fieldset label textarea::-moz-placeholder {
+  color: #84848a;
+}
 form fieldset label input::placeholder, form fieldset label textarea::placeholder {
   color: #84848a;
+}
+form fieldset label input:focus::-moz-placeholder, form fieldset label textarea:focus::-moz-placeholder {
+  color: transparent;
 }
 form fieldset label input:focus::placeholder, form fieldset label textarea:focus::placeholder {
   color: transparent;
@@ -463,7 +470,8 @@ footer section.top .lines {
 footer section.top .container {
   display: grid;
   grid-template-areas: "f-1 f-1 f-2 f-3 f-4 f-5";
-  column-gap: 7rem;
+  -moz-column-gap: 7rem;
+       column-gap: 7rem;
 }
 footer section.top .f {
   display: flex;
@@ -564,7 +572,6 @@ footer section.bottom .social a {
 @media (max-width: 992px) {
   /* HEADER 992 */
   header {
-    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 9999;
@@ -618,7 +625,8 @@ footer section.bottom .social a {
   header #navbarNav .nav {
     grid-template-areas: "navi" "login" "line" "contact" "social";
     row-gap: 0rem;
-    column-gap: 0rem;
+    -moz-column-gap: 0rem;
+         column-gap: 0rem;
   }
   header #navbarNav .nav .contact {
     width: 100%;
@@ -689,7 +697,8 @@ footer section.bottom .social a {
   header #navbarNav .nav {
     grid-template-areas: "navi" "login" "line" "contact" "social";
     row-gap: 0rem;
-    column-gap: 0rem;
+    -moz-column-gap: 0rem;
+         column-gap: 0rem;
   }
   header #navbarNav .nav .contact {
     width: 100%;
@@ -762,7 +771,8 @@ section.about .container .row .left {
 section.about .container .row .left .image-wrapper .image {
   height: 700px;
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   padding-left: 3rem;
 }
 section.about .container .row .left .image-wrapper .lines {
@@ -1185,7 +1195,8 @@ section.project-case .objects a.object *, section.project-case .objects a.object
 section.project-case .objects a.object img {
   width: 100%;
   height: 350px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   display: block;
 }
 section.project-case .objects a.object h3 {
@@ -1306,6 +1317,7 @@ section.service .cards .card.flipped:hover i, section.service .cards .card.flipp
   color: #ffffff;
 }
 section.service .btngroup .btn {
+  width: -moz-fit-content;
   width: fit-content;
 }
 section.service .lines {
@@ -1351,7 +1363,8 @@ section.team .cards .card {
 }
 section.team .cards .card img {
   height: 460px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 section.team .cards .card .text {
   margin-top: 2rem;
@@ -1383,7 +1396,8 @@ section.team .cards .card .text {
   }
   section.team .container .cards .card img {
     height: 345px;
-    object-position: auto 20%;
+    -o-object-position: auto 20%;
+       object-position: auto 20%;
   }
 }
 section.testimonials {
@@ -1419,7 +1433,8 @@ section.testimonials .container .cards .card .person img {
   height: 5rem;
   width: 5rem;
   border-radius: 50%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 section.testimonials .container .cards .card .person .text h3, section.testimonials .container .cards .card .person .text p {
   margin: 0;
@@ -1548,7 +1563,8 @@ section.why-us .right .image-wrapper img {
   width: 700px;
   height: 550px;
   float: right;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   position: relative;
   z-index: 5;
 }
@@ -1599,6 +1615,7 @@ section.article-news .container .article-main article p {
 section.article-news .container .article-main article .btn-grp {
   margin-top: 2em;
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
 }
 section.article-news .container .article-main article .btn-grp div {
@@ -1628,8 +1645,14 @@ section.article-news .container .article-main .sidebar .search-field {
   padding: 1rem 2rem;
   border-radius: 25px;
 }
+section.article-news .container .article-main .sidebar .search-field input#news-search::-moz-placeholder {
+  color: #84848a;
+}
 section.article-news .container .article-main .sidebar .search-field input#news-search::placeholder {
   color: #84848a;
+}
+section.article-news .container .article-main .sidebar .search-field input#news-search:focus::-moz-placeholder {
+  color: transparent;
 }
 section.article-news .container .article-main .sidebar .search-field input#news-search:focus::placeholder {
   color: transparent;
@@ -1650,11 +1673,17 @@ section.article-news .container .article-main .sidebar .recent-posts h3::after, 
   width: 2rem;
   border-bottom: 1px solid #191919;
 }
-section.article-news .container .article-main .sidebar .recent-posts h4, section.article-news .container .article-main .sidebar .categories h4 {
-  font-size: 1.1rem;
-}
 section.article-news .container .article-main .sidebar .recent-posts p, section.article-news .container .article-main .sidebar .recent-posts div, section.article-news .container .article-main .sidebar .categories p, section.article-news .container .article-main .sidebar .categories div {
   color: #84848a;
+}
+section.article-news .container .article-main .sidebar .recent-posts div div {
+  cursor: pointer;
+}
+section.article-news .container .article-main .sidebar .recent-posts div div h4 {
+  font-size: 1.1rem;
+}
+section.article-news .container .article-main .sidebar .recent-posts div div:hover h4, section.article-news .container .article-main .sidebar .recent-posts div div:hover p {
+  text-decoration: underline;
 }
 section.article-news .container .article-main .sidebar .recent-posts .line {
   height: 1px;
@@ -1664,9 +1693,48 @@ section.article-news .container .article-main .sidebar .recent-posts .line {
 }
 section.article-news .container .article-main .sidebar .categories div {
   font-weight: 600;
+  cursor: pointer;
 }
 section.article-news .container .article-main .sidebar .categories div span {
   color: #191919;
+}
+section.article-news .container .article-main .sidebar .categories div:hover {
+  text-decoration: underline;
+}
+
+/* MEDIA QUERIES */
+@media (max-width: 1520px) {
+  section.article-news .container .article-header {
+    max-width: 100%;
+  }
+  section.article-news .container .article-main {
+    flex: auto;
+    gap: 0;
+  }
+  section.article-news .container .article-main img {
+    width: 100%;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+  section.article-news .container .article-main .sidebar {
+    display: none;
+  }
+}
+@media (max-width: 576px) {
+  section.article-news .container .article-header .article-header-info {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+}
+section.not-found {
+  background-color: #ffffff;
+}
+section.not-found .container {
+  padding: 5dvh 0 15dvh 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 section.newsletter {
